secgroup.tf
resource "aws_security_group" "tfsg" {      # To create tfsg security group in main vpc using the main vpc id
  name_prefix = "tfsg"
  vpc_id      = aws_vpc.main.id

  # Inbound rule - allow SSH from anywhere
  ingress {
    description = "SSH Access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Inbound rule - allow HTTP from anywhere
  ingress {
    description = "HTTP Access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound rule - allow all traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
